/**

*/
syntax = "proto3";
package sri_proto;

import public "github.com/spiffe/sri/common/plugins/common/proto/common.proto";

message PluginInfoRequest {}

message PluginInfoReply{
    repeated GetPluginInfoResponse pluginInfo = 1;
}

message StopRequest {}

message StopReply {}

service Server {
    rpc Stop(StopRequest) returns (StopReply);
    rpc PluginInfo(PluginInfoRequest) returns (PluginInfoReply);
}
